infra/analytics/redash/redash-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redash-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redash-worker
  template:
    metadata:
      labels:
        app: redash-worker
    spec:
      containers:
        - name: redash-worker
          image: redash/redash:10.1.0.b50633
          imagePullPolicy: IfNotPresent
          args:
            - worker
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              cpu: "1"
              memory: 2Gi
