infra/analytics/redash/redash-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redash-server
spec:
  selector:
    app: redash-server
  ports:
    - name: http
      port: 5000
      targetPort: 5000
