infra/analytics/redash/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redash-redis
spec:
  selector:
    app: redash-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
