infra/analytics/redash/redash-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redash-server
spec:
  parentRefs:
    - name: sqld-gateway
      namespace: app
  hostnames:
    - redash.selfronny.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: redash-server
          port: 5000
